--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hello from secured endpoint</div>
+    <div>hello from secured endpoint wow</div>
 </body>
 </html>
